--- a/forms/installation_sat_form.html
+++ b/forms/installation_sat_form.html
@@ -6,107 +6,271 @@
 </head>
 
 <body>
-    <form action="#">
-        <div class="customerInfo">
-            <label for="customerID">รหัสลูกค้า</label>
-            <input type="number" id="customerID" name="customerID">
-            <br><br>
-            <!-- pop up modal form when search -->
-            <input class="btn" type="submit" value="ค้นหาลูกค้า">
-            <input class="btn" type="submit" value="เพิ่มลูกค้าใหม่">
-            <br><br>
-            <!-- display only -->
-            <label for="customerName">ชื่อ-นามสกุล ลูกค้า</label>
-            <input type="text" id="customerName" name="customerName">
-            <br><br>
-            <label for="customerAddress">ที่อยู่</label>
-            <input type="text" id="customerAddress" name="customerAddress">
-            <br><br>
-            <label for="customerTel">หมายเลขโทรศัพท์</label>
-            <input type="text" id="customerTel" name="customerTel">
-            <br><br>
-        </div>
+    <div class="form-grid">
+        <form action="#">
+            <div class="row">
+                <div class="column">
+                    <div class="purchaseInfo">
+                        <p>ข้อมูลการซื้อ</p>
+                        <table>
+                            <tr>
+                                <td>วันที่-เวลา ขาย</td>
+                                <td>
+                                    <input type="datetime" id="purchaseDate" name="purchaseDate">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">
+                                    <span>พนักงานขาย</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>รหัสพนักงาน</td>
+                                <td>
+                                    <input type="number" id="staffID" name="staffID">
+                                </td>
+                            </tr>
+                            <tr>
+                                <!-- display only -->
+                                <td>ชื่อพนักงาน</td>
+                                <td>
+                                    <input type="text" id="staffName" name="staffName">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">
+                                    <span>รายละเอียดการชำระเงิน</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>ยอดรวมการชำระเงิน</td>
+                                <td>
+                                    <input type="number" id="staffID" name="staffID">
+                                </td>
+                            </tr>
+                            <tr>
+                                <!-- display only -->
+                                <td>จำนวนเงินที่จ่าย/วางมัดจำ</td>
+                                <td>
+                                    <input type="number" id="staffName" name="staffName">
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="appoinmentInfo">
+                        <p>การนัดหมาย</p>
+                        <table>
+                            <tr>
+                                <td>เลขที่ใบจัดส่ง</td>
+                                <td>
+                                    <input type="number" id="deliveryJobID" name="deliveryJobID"> <!-- auto generate -->
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>วันที่-เวลา การนัดหมาย</td>
+                                <td>
+                                    <input type="datetime" id="appointmentDate" name="appointmentDate">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <span>พนักงานติดตั้ง</span>
+                                </td>
+                                <td>
+                                    <input class="add-btn" type="submit" value="เพิ่ม">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>รหัสพนักงาน</td>
+                                <td>
+                                    <input type="number" id="staffID" name="staffID">
+                                </td>
+                            </tr>
+                            <tr>
+                                <!-- display only -->
+                                <td>ชื่อพนักงาน</td>
+                                <td>
+                                    <input type="text" id="staffName" name="staffName">
+                                </td>
+                            </tr>
+                        </table>
 
-        <div class="purchaseInfo">
-            <label for="purchaseDate">วันที่-เวลา ขาย</label>
-            <input type="datetime" id="purchaseDate" name="purchaseDate">
-            <br><br>
-            <p>พนักงานขาย</p>
-            <label for="staffID">รหัสพนักงาน</label>
-            <input type="number" id="staffID" name="staffID">
-            <br><br>
-            <!-- display only -->
-            <label for="staffName">ชื่อพนักงาน</label>
-            <input type="text" id="staffName" name="staffName">
-            <br><br>
-        </div>
+                    </div>
+                </div>
+            </div>
 
+            <div class="row">
+                <div class="customerInfo">
+                    <p>ข้อมูลลูกค้า</p>
+                    <!-- display only -->
+                    <table>
+                        <tr>
+                            <td>
+                                รหัสลูกค้า
+                            </td>
+                            <td>
+                                <input type="number" id="customerID" name="customerID">
+                            </td>
+                            <td>
+                                <!-- pop up modal form when search -->
+                                <input class="btn" type="submit" value="ค้นหาลูกค้า">
+                                <!-- The Modal -->
+                                <div id="searchModal" class="modal">
+                                    <div class="modal-content">
+                                        <!-- searching by id, name, phone number  -->
+                                        <table>
+                                            <tr>
+                                                <td>
+                                                    รหัสลูกค้า
+                                                </td>
+                                                <td>
+                                                    <input type="number" id="customerID" name="customerID">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    ชื่อ-นามสกุล ลูกค้า
+                                                </td>
+                                                <td>
+                                                    <input type="text" id="customerName" name="customerName">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    หมายเลขโทรศัพท์
+                                                </td>
+                                                <td>
+                                                    <input type="text" id="customerTel" name="customerTel">
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <input class="btn" type="submit" value="ค้นหาลูกค้า">
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <input class="btn" type="submit" value="เพิ่มลูกค้าใหม่">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                ชื่อ-นามสกุล ลูกค้า
+                            </td>
+                            <td>
+                                <input type="text" id="customerName" name="customerName">
+                            </td>
+                            <td>
+                                หมายเลขโทรศัพท์
+                            </td>
+                            <td>
+                                <input type="text" id="customerTel" name="customerTel">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                ที่อยู่
+                            </td>
+                            <td colspan="3">
+                                <textarea id="customerAddress" name="customerAddress"></textarea>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+
+    </div>
+    <div class="row">
         <div class="productInfo">
-            <label for="productName">สินค้า</label>
-            <input type="text" id="productName" name="productName">
-            <br><br>
-            <label for="productBrand">ยี่ห้อ</label>
-            <select id="productBrand" name="productBrand">
-                <option value="Brand">Product Brand</option>
-                <!-- data from brand table -->
-            </select>
-            <br><br>
-            <label for="productModel">รุ่น LNB</label>
-            <input type="text" id="productModel" name="productModel">
-            <br><br>
-            <label for="productSN">หมายเลขเครื่อง LNB</label>
-            <input type="text" id="productSN" name="productSN">
-            <br><br>
-            <span>จำนวนกล่องรับสัญญาณ</span>
-            <input type="number" id="productAcc" name="productAcc">
-            <span>กล่อง</span>
-            <br><br>
-            <label for="productModel">รุ่น กล่องรับสัญญาณ</label>
-            <input type="text" id="productModel" name="productModel">
-            <br><br>
-            <label for="productSN">หมายเลขเครื่อง กล่องรับสัญญาณ</label>
-            <input type="text" id="productSN" name="productSN">
-            <br><br>
+            <p>รายละเอียดสินค้า</p>
+            <table>
+                <tr>
+                    <td>สินค้า</td>
+                    <td>
+                        <select class="dropdown-field-sat" id="productName" name="productName">
+                            <option value="Name1">Product Name1</option>
+                            <option value="Name1">Product Name2</option>
+                        </select>
+                    </td>
+                    <td>ยี่ห้อ</td>
+                    <td>
+                        <select id="productBrand" class="dropdown-field-sat" name="productBrand">
+                            <option value="Brand">Product Brand</option>
+                            <!-- data from brand table -->
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td>รุ่น LNB</td>
+                    <td>
+                        <input type="text" class="table-field-sat" id="LNBModel" name="LNBModel">
+                    </td>
+                    <td>หมายเลขเครื่อง LNB</td>
+                    <td>
+                        <input type="text" class="table-field-sat" id="LNBSN" name="LNBSN">
+                    </td>
+                </tr>
+            </table>
+            <table>
+                <span>กล่องรับสัญญาณ</span>
+                <tr>
+                    <th>รุ่น</th>
+                    <th>หมายเลขเครื่อง</th>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="text" class="table-field" id="boxModel" name="boxModel">
+                    </td>
+                    <td>
+                        <input type="text" class="table-field" id="boxSN" name="boxSN">
+                    </td>
+                </tr>
+            </table>
+            <input class="add-btn" type="submit" value="เพิ่ม">
+            <div class="qty">
+                <span>จำนวนกล่องรับสัญญาณ</span>
+                <input type="number" id="productQty" name="productQty">
+                <span>กล่อง</span>
+            </div>
         </div>
-
+    </div>
+    <div class="row">
         <div class="installationInfo">
-            <label for="installJobID">เลขที่ใบงานติดตั้ง</label>
-            <input type="number" id="installJobID" name="installJobID"> <!-- auto generate -->
-            <br><br>
-            <label for="appointmentDate">วันที่-เวลา การนัดหมาย</label>
-            <input type="datetime" id="appointmentDate" name="appointmentDate">
-            <br><br>
-            <p>พนักงานติดตั้ง</p>
-            <label for="staffID">รหัสพนักงาน</label>
-            <input type="number" id="staffID" name="staffID">
-            <br><br>
-            <!-- display only -->
-            <label for="staffName">ชื่อพนักงาน</label>
-            <input type="text" id="staffName" name="staffName">
-            <br><br>
             <p>อุปกรณ์ที่ใช้ในการติดตั้ง เพิ่มเติม</p>
             <input type="radio" id="productEquip" name="productEquip">
             <label for="productEquip">ไม่มี</label>
-            <br>
             <input type="radio" id="productEquip" name="productEquip">
             <label for="productEquip">มี</label>
-            <br><br>
-            <span>จำนวน</span>
-            <input type="number" id="productQty" name="productQty">
-            <span>ชิ้น</span>
-            <br><br>
-            <!-- generate from input number -->
-            <label for="equipmentID">รหัสอุปกรณ์</label>
-            <input type="number" id="equipmentID" name="equipmentID">
-            <br><br>
-            <!-- display only -->
-            <label for="equipmentName">ชื่ออุปกรณ์</label>
-            <input type="text" id="equipmentName" name="equipmentName">
-            <br><br>
+            <table>
+                <tr>
+                    <th>รหัสอุปกรณ์</th>
+                    <th>ชื่ออุปกรณ์</th>
+                    <th>จำนวน</th>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="number" class="table-field" id="equipmentID" name="equipmentID">
+                    </td>
+                    <td>
+                        <input type="text" class="table-field" id="equipmentName" name="equipmentName">
+                    </td>
+                    <td>
+                        <input type="number" class="table-field" id="equipmentQty" name="equipmentQty">
+                    </td>
+                </tr>
+            </table>
+            <input class="add-btn" type="submit" value="เพิ่ม">
+            <div class="qty">
+                <span>จำนวนอุปกรณ์</span>
+                <input type="number" id="equipQty" name="equipQty">
+                <span>ชิ้น</span>
+            </div>
         </div>
-
-        <input class="btn" type="submit" value="Submit">
+    </div>
+    <input class="submit-btn" type="submit" value="บันทึกข้อมูล">
     </form>
+    </div>
 </body>
 
 </html>
