Designed form info repairing and returning

--- a/forms/installation_sat_form.html
+++ b/forms/installation_sat_form.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <h1 id="pageHeader">ข้อมูลการติดตั้ง จานดาวเทียม</h1>
     <div class="form-grid">
         <form action="#">
             <div class="row">
@@ -45,14 +46,13 @@
                             <tr>
                                 <td>ยอดรวมการชำระเงิน</td>
                                 <td>
-                                    <input type="number" id="staffID" name="staffID">
+                                    <input type="number" id="totalSpent" name="totalSpent">
                                 </td>
                             </tr>
                             <tr>
-                                <!-- display only -->
                                 <td>จำนวนเงินที่จ่าย/วางมัดจำ</td>
                                 <td>
-                                    <input type="number" id="staffName" name="staffName">
+                                    <input type="number" id="totalPaid" name="totalPaid">
                                 </td>
                             </tr>
                         </table>
