Edit submit button

--- a/forms/brand_form.html
+++ b/forms/brand_form.html
@@ -13,7 +13,7 @@
         <label for="brandName">ชื่อยี่ห้อ</label>
         <input type="text" id="brandName" name="brandName">
         <br><br>
-        <input class="btn" type="submit" value="Save">
+        <input class="submit-btn" type="submit" value="บันทึกข้อมูล">
     </form>
 </body>
 
