--- a/forms/repairing_form.html
+++ b/forms/repairing_form.html
@@ -288,7 +288,7 @@
                 </div>
             </div>
         </div>
-        <input class="btn" type="submit" value="Submit">
+        <input class="submit-btn" type="submit" value="บันทึกข้อมูล">
     </form>
 </body>
 
