--- a/forms/service_partner_form.html
+++ b/forms/service_partner_form.html
@@ -57,7 +57,7 @@
         <input type="text" id="partnerTel" name="partnerTel">
         <br><br>
 
-        <input class="btn" type="submit" value="Save">
+        <input class="submit-btn" type="submit" value="บันทึกข้อมูล">
     </form>
 </body>
 
