--- a/forms/customer_form.html
+++ b/forms/customer_form.html
@@ -53,7 +53,7 @@
         <input type="text" id="customerTel" name="customerTel">
         <br><br>
 
-        <input class="btn" type="submit" value="Save">
+        <input class="submit-btn" type="submit" value="บันทึกข้อมูล">
     </form>
 </body>
 
