add user position in detail on side menubar

--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
             </a>
         </div>
         <div class="profile">
-            <button class="profile-btn" id="staffName">
+            <button class="profile-btn">
                 <table>
                     <tr>
                         <td rowspan="3">
@@ -81,12 +81,16 @@
                     </tr>
                     <tr>
                         <td>
-                            Staff Name
+                            <div id="staffName">
+                                Staff Name
+                            </div>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            Position
+                            <div id="staffPosition" >
+                                Position
+                            </div>
                         </td>
                     </tr>
                 </table>
