Edit profile style

--- a/home.html
+++ b/home.html
@@ -73,27 +73,14 @@
         </div>
         <div class="profile">
             <button class="profile-btn">
-                <table>
-                    <tr>
-                        <td rowspan="3">
-                            <i class="fa fa-fw fa-user"></i>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div id="staffName">
-                                Staff Name
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div id="staffPosition" >
-                                Position
-                            </div>
-                        </td>
-                    </tr>
-                </table>
+                <i class="fa fa-fw fa-user"></i>
+                <span id="staffName">
+                    Staff Name
+                </span>
+                <span> | </span>
+                <span id="staffPosition">
+                    Position
+                </span>
             </button>
             <div class="profile-logout">
                 <a href="#" id="logoutButton">ออกจากระบบ</a>
